# sendspin-armv6

./: CMakeLists.txt
.github/workflows/: build-debug.yml  build-release.yml  release.yml
config/: sendspin-armv6.conf
scripts/: install.sh
src/: config.cpp  config.h  main.cpp
